2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* Makefile.am: Use -static-libstdc++ to remove the dependency on
	  libstdc++-6.dll.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Free the collection if it can not
	  be added to the list.

	* Makefile.am: Use -static-libgcc to remove the dependency on
	  libgcc_s_sjlj-1.dll.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Run action commands through cmd.exe.

2010-08-04  Sancho Lerena <slerena@artica.es>

	* win32/bin/util/df_percent.vbs: New VBS plugin to detect all
	hardrives and return free disk on %.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Run action commands through cmd.exe.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Changed sscanf format strings. They did
	  not seem to work well in native Windows.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc: fixed unclosed directory with function closedir.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc, pandora_file.h: Added function to remove directories
	recursively

        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
        support for unzip collections and improved functionality to manage
	collections.

2010-07-14  Dario Rodriguez <dario.rodriguez@artica.es>

        * win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added functionality
        to get collection from configuration file.
        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
        support for manage collections

2010-07-13  Dario Rodriguez  <dario.rodriguez@artica.es>

	* pandora_agent_conf.cc: Added support to parse collections
	* pandora_agent_conf.h: Added support to parse collections

2010-07-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h, modules/pandora_module_factory.cc,